fixed text overflow in create board button on ipad, fixed container overflow when editing board

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -51,7 +51,8 @@
     list-style-type: none;
     position: relative;
     align-content: center;
-    
+    display: flex;
+    flex-direction: column;
 }
 
 .home-board
@@ -134,6 +135,27 @@
 
 }
 
+@media only screen and (max-width: 1536px) 
+{
+    .home-create-board-button
+    {
+        width:20vw;
+        height:5vw;
+        position: relative;
+        left: 40%;
+        margin:auto;
+        font-size: large;
+        align-self: center;
+
+        transition: ease-out 0.15s;
+    }
+    .home-create-board-button:hover
+    {
+        font-size: medium;
+        box-shadow: inset 0 0 100px 0 darkorange;
+        color: black;
+    }
+}
 .home-board label
 {
     font-size: 1.8em;
